[package]
name = "cleaner"
version = "0.10.1"
edition = "2021"
description = "Cleaner is a utility for cleaning up build artifacts in bulk"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "supported-platforms.json", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/cleaner"
repository = "https://github.com/Nejat/cleaner"
keywords = ["cleaner", "delete", "build", "artifacts", "thewolf"]
authors = ["Nejat<nejatoz@gmail.com>"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
inquire = "0.7"
once_cell = "1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
wildmatch = "2"

[dev-dependencies]
version-sync = "0.9"
