[package]
name = "cleaner"
version = "0.11.1"
edition = "2024"
description = "Cleaner is a utility for cleaning up build artifacts in bulk"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "supported-platforms.json", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/cleaner"
repository = "https://github.com/Nejat/cleaner"
keywords = ["cleaner", "delete", "build", "artifacts", "thewolf"]
authors = ["Nejat<nejatoz@gmail.com>"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
inquire = "0.2"
once_cell = "1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
wildmatch = "2"

[dev-dependencies]
version-sync = "0.9"

[profile.release]
strip = true                # automatically strip symbols from the binary.
opt-level = 3               # all optimizations
lto = "fat"                 # link time optimizations
codegen-units = 1           # synchronous compilation
panic = "abort"             # minimum panic handling
